@@ -1,6 +1,7 @@
 7/22/2001
 	- Added the -q (print query) option to dig.
 	- Bitstring labels are now canonicalized.
+	- jnamed implements the DO (DNSSEC OK) bit.
 
 7/19/2001
 	- A string tokenizer bug caused TXT records with one string to be
